# ctrldot

./: .gitignore  .goreleaser.yaml  CLEANUP_AND_IMPLEMENTATION_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INTEGRATION.md  LICENSE  MCP.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  SEED_PRODUCT_LEDGER.md  TESTING.md  USAGE.md  docker-compose.yml  examples.sh  financialledger-policyset.yaml  go.mod  go.sum  kesteron-assetlink-product-seed.yaml  kesteron-fieldserve-product-seed.yaml  kesteron-stablecoinreserves-finledger-seed.yaml  kesteron-treasury-finledger-seed.yaml  productledger-policyset.yaml  seed-kesteron-materials.sh  seed-kesteron.sh  start-web-ui.sh
adapters/: README.md
adapters/crewai/: README.md  pyproject.toml
adapters/crewai/ctrldot_crewai/: __init__.py  client.py  guard.py  hooks.py  llm.py  tool.py
adapters/crewai/ctrldot_crewai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/crewai/examples/: crew_minimal.py
adapters/crewai/tests/: test_client.py  test_llm_wrapper.py  test_tool_wrapper.py
context/: 00-overview.md  01-kernel-spec.md  02-api-contract.md  03-db-schema.sql  04-go-interfaces.md  05-policy-language.md  06-acceptance-tests.md  07-repo-scaffold.md  08-default-policyset.yaml  current.md
docs/: AGENT_EXPERIENCE.md  BIOS_UI.md  CONFIG.md  DECISION_LEDGER_DEMO_IMPLEMENTATION_PLAN.md  DEPLOY-HETZNER-ENTRA-OAUTH2PROXY.md  DEPLOY-HETZNER.md  DEPLOY.md  SETUP_GUIDE.md  SHOWCASE.md  TROUBLESHOOTING.md  index.md
examples/: README.md  python-agent.py
materials/: M-D-FS-01.md  M-E-01.md  (+7 more)
(+215 files in other folders)
