[project]
name = "ctrldot-crewai"
version = "0.1.0"
description = "Ctrl Dot adapter for CrewAI - Guard LLM calls and tool execution"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "crewai>=0.1.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctrldot_crewai*"]
